# voice-evals

./: .env.example  .gitignore  README.md  pyproject.toml  voice-evals-design-spec.md  voice-evals-judge-prompt.md
calibration/: golden_set.csv
config/: default.yaml  example.local.yaml  judge.openai.yaml  judge_system.txt  rubric.default.txt  sample_agent.txt
scenarios/: example.yaml  live_barge_in.yaml  noisy_cafe.yaml
scripts/: fetch_models.py
src/voice_evals/: __init__.py  aggregate.py  cache.py  calibrate.py  cli.py  config.py  ingest.py  logging_util.py  models.py  report.py  runner.py  semantic_hook.py
src/voice_evals/scorers/: _audio.py  base.py
src/voice_evals/scorers/acoustic/: _utmos_worker.py  dnsmos.py  nisqa.py  squim.py  utmos.py
src/voice_evals/scorers/dynamics/: barge_in.py  latency.py  segmentation.py  turn_taking.py
src/voice_evals/scorers/judge/: base_judge.py  gemini.py  local_omni.py  openai_audio.py
src/voice_evals/simulate/: __init__.py  base.py  gating.py  openai_backends.py  orchestrator.py  scenario.py  telephony.py  telephony_live.py
tests/: conftest.py  test_aggregate.py  test_cache.py  test_calibrate.py  test_config.py  test_ingest.py  test_judge_parsing.py  test_models.py  test_report.py  test_runner.py  test_scorers_acoustic.py  test_scorers_dynamics.py  test_simulate.py  test_telephony.py
tests/eval_gates/: test_corpus_gates.py
